minor PostPage NavBar and PostModal CSS changes

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -32,6 +32,9 @@
         background-clip: text;
         text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
     }
+    .Name:hover{
+        cursor: pointer;
+    }
 
     h1 {
         font-size: 30px;
