--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -78,7 +78,7 @@
             background-color: white;
             padding-right: 40px;
             box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
-            height: 60vh;
+            height: 80vh;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
@@ -111,8 +111,8 @@
             .postImage{
                 overflow: hidden;
                 background-size: contain;
-                width: 50vw;
-                height: 50vh;
+                width: 70vw;
+                height: 80vh;
                 border-radius: 6px;
                 display: flex;
                 justify-content: center;
@@ -145,6 +145,30 @@
                 .like:hover,.dislike:hover,.comment:hover{
                     color: rgb(171,211,246);
                 }
+                .pDiv{
+                    margin-top: 5px;
+                    display: flex;
+                    p{
+                        margin-left:5px ;
+                        margin-right:5px ;
+                        height: 2.5vh;
+                    }
+                }
+                .likes:hover,.dislikes:hover,.comment:hover{
+                    color: rgb(171,211,246);
+                    cursor: pointer;
+                }
+                footer{
+                    align-self: center;
+                    border-radius: 7px;
+                    padding: 2.5px;
+                    border: solid 1px black;
+                    width: 75vw;
+                    height: 5vh;
+                    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                }
+            
+                
             }
 
         }
