--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -72,6 +72,7 @@
                 p:hover {
                     background-color: rgb(180, 217, 247);
                     color: white;
+                    cursor: pointer;
                 }
 
             }
