--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -83,7 +83,7 @@
                 height: 10vh;
                 width: 65vw;
                 display: flex;
-                justify-content: flex-start;
+                justify-content: center;
                 align-items: flex-start;
                 padding-left: 10px;
             }
