--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -38,7 +38,6 @@
         h3{}
         h4{}
         section{
-            background-color: yellow;
            top: 40vh; 
             display: flex;
             justify-content: space-evenly;
@@ -54,7 +53,6 @@
             }
         }
 
-        
     }
     ul{
         top:50vh;
@@ -68,10 +66,11 @@
         border-radius: 7px;
         display: flex;
         flex-direction: column;
-        width: 90vw;
+        width: 70vw;
         border: solid 1px ;
         align-items: center;
         left: 3.5vw;
+        margin-left: 10vw;
 
         li{
 
@@ -84,7 +83,7 @@
             justify-content: flex-start;
             margin-bottom: 15px;
             align-items: center;
-            width: 85vw;
+            width: 65vw;
             border: solid 2px black;
             li:hover{
                 padding: 20px;
@@ -96,7 +95,7 @@
                 justify-content: space-between;
 
                 height: 10vh;
-                width: 85vw;
+                width: 65vw;
                 align-items: center;
                 h1{
                     color: rgb(171,211,246);
@@ -111,7 +110,7 @@
             .postImage{
                 overflow: hidden;
                 background-size: contain;
-                width: 70vw;
+                width: 65vw;
                 height: 80vh;
                 border-radius: 6px;
                 display: flex;
@@ -123,7 +122,7 @@
                 margin-left: 2vw;
                 margin-top: 0;
                 height: 50vh;
-                width: 67vw;
+                width: 55vw;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -136,7 +135,7 @@
             
             aside{
                 display: flex;
-                width: 80vw;
+                width: 65vw;
                 justify-content: flex-start;
                 p{
                     margin-left:5px ;
@@ -263,7 +262,8 @@
         ul{
             z-index: -1;
             li{
-                background-color: black;
+            background-color: rgb(28,28,28);
+
             }
             li:hover{
 
