--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -83,7 +83,8 @@
         font-size: 1.5vmin;
     }
     .signupButton:hover{
-        color:rgb(170,218,250); ;
+        color:rgb(170,218,250); 
+        cursor: pointer;
     }
 }
 
