--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -24,7 +24,6 @@
     text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
 
     .Name {
-
         color: transparent;
         background: rgb(180, 217, 247);
         -webkit-background-clip: text;
@@ -33,6 +32,7 @@
         text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
     }
     .Name:hover{
+        animation: fadeIn 1s;
         cursor: pointer;
     }
 
@@ -136,3 +136,8 @@
         }
     }
 }
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
