--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -32,6 +32,7 @@
         }
         button:hover{
             color: white;
+            cursor: pointer;
             background-color: rgb(180,217,247);
         }
 
