--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -54,10 +54,13 @@
         padding-left: 10px;
         padding-right: 10px;
         border-radius: 14px;
-        background-color: rgb(196, 196, 196);
+        background-color: rgb(74, 119, 236);
         //box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         margin-top: 0;
         color: white;
+    }
+    .uploadPic:hover{
+        cursor: pointer;
     }
 
     form {
@@ -93,7 +96,8 @@
         overflow-y: scroll;
 
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        p{
+
+        p {
 
             display: flex;
             flex-direction: column;
@@ -105,7 +109,8 @@
         display: flex;
         justify-content: space-around;
         width: 15vw;
-        border-radius: 100%;
+        height: 10vh;
+        align-items: flex-start;
 
 
         button {
@@ -121,7 +126,7 @@
         }
 
         .setting {
-            background-color: rgb(236, 106, 94);
+            background-color: rgb(245, 191, 79);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -132,7 +137,7 @@
         }
 
         .friends {
-            background-color: rgb(244, 191, 79);
+            background-color: #FF6410;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -161,7 +166,8 @@
             cursor: pointer;
         }
     }
-    .userInfo{
+
+    .userInfo {
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
         border-radius: 7px;
         width: 20vw;
@@ -169,10 +175,17 @@
         justify-content: space-around;
         flex-direction: column;
         align-items: center;
-        .pDiv{
+        div{
             display: flex;
-            p{
-    
+            width: 20vw;
+            justify-content: space-evenly;
+            font-size: 20px;
+        }
+        .pDiv {
+            display: flex;
+
+            p {
+
                 padding-left: 2vw;
                 padding-right: 2vw;
             }
@@ -235,11 +248,11 @@
             }
 
             .setting {
-                background-color: red;
+                background-color: rgb(245, 191, 79);
             }
 
             .friends {
-                background-color: yellow;
+                background-color: #FF6410;
             }
 
             .edit {
@@ -266,7 +279,7 @@
         .controlPanel {
 
             .setting {
-                background-color: #FF6410;
+                background-color: rgb(245, 191, 79);
             }
 
             .friends {
@@ -280,12 +293,14 @@
         }
 
     }
-    .bio{
-        background-color:rgb(28,28,28);
-        color:white;
+
+    .bio {
+        background-color: rgb(28, 28, 28);
+        color: white;
     }
-    .userInfo{
-        background-color:rgb(28,28,28);
+
+    .userInfo {
+        background-color: rgb(28, 28, 28);
         color: white;
     }
 
