--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -38,6 +38,7 @@
         }
         h4{
             padding: 5px;
+            
         }
         h4:hover{
             cursor: pointer;
@@ -58,6 +59,9 @@
             width: 80vw;
             height: 50vh;
 
+        }
+        img:hover{
+            cursor: pointer;
         }
         .interactions{
             width: 80vw;
