--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -127,39 +127,27 @@
 
 @media (max-width:900px) {
     .PostPage {
-    
-    }
-    
-}
-
-@media (prefers-color-scheme:dark) {
-    .PostPage {
-        background-color: black;
-        color: white;
         section{
-            background-color: rgb(28,28,28);
-            border: solid 1px white;
             header{
-                
-            .headerClickables:hover{
-                color: #FF6410;
-            }
+                .headerClickables:hover{
+                }
             }
             aside{
-                border: solid 1px white;
-
             }
             h4{
+
             }
             h4:hover{
-                background-color: #FF6410;
-                color: white;
 
             }
             p{
 
             }
             img{
+
+
+            }
+            img:hover{
 
             }
             .interactions{
@@ -169,9 +157,72 @@
                 }
             }
             .commentSection{
-
                 li{
+                }
+            }
+            .inputDiv{
+                input{    
+                }
+                button{
+                }
+                button:hover{
 
+                }
+            }
+        }
+        .loading{
+        }
+    }
+ 
+    
+}
+
+@media (prefers-color-scheme:dark) {
+    .PostPage {
+        background-color: black;
+        section{
+            background-color: rgb(28,28,28);
+            header{
+                color: white;
+                .headerClickables:hover{
+            color: #FF6410;
+
+
+                }
+            }
+            aside{
+
+
+
+            }
+            h4{
+
+
+            }
+            h4:hover{
+                background-color: white;
+
+            }
+            p{
+
+            }
+            img{
+
+
+            }
+            img:hover{
+
+            }
+            .interactions{
+
+                h4{
+
+                }
+            }
+            .commentSection{
+                background-color: black;
+                li{
+                    color: white;
                 }
                
             }
@@ -179,18 +230,26 @@
 
                 input{
 
+
+
+
     
                 }
                 button{
 
+
+
                 }
                 button:hover{
-                    background-color: #FF6410;
+
                 }
             }
         }
         .loading{
 
+
+
         }
     }
+    
 }
