--- a/src/components/ChatsAside/ChatsAside.module.scss
+++ b/src/components/ChatsAside/ChatsAside.module.scss
@@ -6,14 +6,28 @@
     height: 85vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     overflow-y: scroll;
     border: solid 1px white;
     animation: fadeIn 0.5s;
     border-radius: 7px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
+    h1,img{
+        background-color: pink;
+        width: 10vw;
+        height: 10vw;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        animation: fadeIn 2s;
+        
+    }
+    h1:hover, img:hover{
+        cursor: pointer;
+    }
 }
 
 @keyframes fadeIn {
