--- a/src/components/ChatsFlow/ChatsFlow.module.scss
+++ b/src/components/ChatsFlow/ChatsFlow.module.scss
@@ -7,12 +7,43 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     overflow-y: scroll;
     border: solid 1px white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     border-radius: 7px;
     animation: fadeIn 0.5s;
+    color:black;
+    .messages{
+        background-color: #FF6410;
+        width: 70vw;
+        height: 80vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 5vh;
+        width: 70vw;
+        background-color: green;
+        input{
+            width: 59vw;
+            border-radius: 7px;
+        }
+        button{
+            width: 9vw;
+            margin: 5px;
+            border-radius: 7px;
+        }
+        button:hover{
+            cursor: pointer;
+            background-color: rgb(180,217,247);
+            color: white;
+        }
+    }
 }
 
 @keyframes fadeIn {
