fixed up adding and removing friends functionality and integrated into the front end NOW just need to add socket funcitonalitiessssss

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -71,6 +71,7 @@
         }
         .profilePic{
             width: 25px;
+            height: 25px;
             border-radius: 50%;
         }
     }
