--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -111,6 +111,9 @@
             }
 
         }
+        .userPic:hover{
+            cursor: pointer;
+        }
 
         .username {
             margin: 10px;
