--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -213,7 +213,8 @@
 
             }
             .interactions{
-
+                height: 10vh;
+                background-color: rgb(28,28,28);
                 h4{
 
                 }
