--- a/src/components/ChatsAside/ChatsAside.module.scss
+++ b/src/components/ChatsAside/ChatsAside.module.scss
@@ -13,8 +13,28 @@
     animation: fadeIn 0.5s;
     border-radius: 7px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    h1,img{
-        background-color: pink;
+    h1{
+
+        width: 12vw;
+        border-radius: 7px;
+        height: 12vw;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+        p{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 15px;
+            width: 12vw;
+
+        }
+    }
+    img{
+        margin: 3px;
         width: 10vw;
         height: 10vw;
         border-radius: 50%;
@@ -54,7 +74,7 @@
 @media (prefers-color-scheme:dark) {
     .ChatsAside{
         background-color: rgb(28,28,28);
-        color: #FF6410;
+
         box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     
     }
