--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -25,6 +25,7 @@
 
             .profilePic {
                 width: 10vw;
+                height: 10vw;
                 border-radius: 50%;
             }
 
@@ -68,11 +69,13 @@
                     padding: 5px;
                     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
                 }
-
+                
                 p:hover {
                     background-color: rgb(180, 217, 247);
+                    padding: 5px;
                     color: white;
                     cursor: pointer;
+
                 }
 
             }
