lots of minor css changes

--- a/src/components/ChatsAside/ChatsAside.module.scss
+++ b/src/components/ChatsAside/ChatsAside.module.scss
@@ -43,7 +43,7 @@
         justify-content: center;
         overflow: hidden;
         animation: fadeIn 2s;
-        
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     }
     h1:hover, img:hover{
         cursor: pointer;
