--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -27,12 +27,11 @@
         justify-content: center;
         align-items: center;
         //box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
         width: 10vw;
         height: 10vw;
         overflow: hidden;
         border-radius: 100%;
-
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 
         img {
             width: 10vw;
@@ -58,6 +57,7 @@
         //box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         margin-top: 0;
         color: white;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     }
     .uploadPic:hover{
         cursor: pointer;
@@ -70,6 +70,7 @@
         flex-direction: column;
         border-radius: 14px;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+        
         margin-top: 0;
         color: white;
         padding: 5px;
@@ -90,11 +91,12 @@
     }
 
     .bio {
-        width: 20vw;
+        width: 15vw;
+        padding-left: 10px;
+        padding-right: 10px;
         height: 10vh;
         border-radius: 7px;
         overflow-y: scroll;
-
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
         p {
@@ -106,13 +108,13 @@
     }
 
     .controlPanel {
+        border-radius: 7px;
         display: flex;
         justify-content: space-around;
         width: 15vw;
         height: 10vh;
         align-items: flex-start;
-
-
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
         button {
             border: solid 2px;
             color: white;
@@ -123,8 +125,10 @@
             box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
             width: 2.5vw;
             height: 2.5vw;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            margin-top: 15px;
         }
-
+        
         .setting {
             background-color: rgb(245, 191, 79);
             display: flex;
@@ -168,13 +172,14 @@
     }
 
     .userInfo {
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
         border-radius: 7px;
-        width: 20vw;
+        width: 15vw;
         display: flex;
         justify-content: space-around;
         flex-direction: column;
         align-items: center;
+        padding: 10px;
         div{
             display: flex;
             width: 20vw;
