--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -12,25 +12,26 @@
         margin-top: 5vh;
         height: 90vh;
         border-radius: 7px;
-
+        
         header {
-
+            
             border-radius: 7px;
-
+            
             display: flex;
             align-items: center;
             justify-content: space-evenly;
             width: 80vw;
             height: 25vh;
-
+            
             .profilePic {
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
                 width: 10vw;
                 height: 10vw;
                 border-radius: 50%;
             }
-
+            
             h6 {
-
+                
                 width: 25vw;
                 height: 20vh;
                 display: flex;
@@ -38,9 +39,9 @@
                 align-items: center;
                 flex-direction: column;
                 border-radius: 7px;
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
             }
-
+            
             aside {
                 width: 10vw;
                 height: 20vh;
@@ -49,10 +50,11 @@
                 align-items: center;
                 flex-direction: column;
                 border-radius: 7px;
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+                
             }
-
+            
             .interactions {
                 height: 20vh;
                 width: 10vw;
@@ -61,13 +63,13 @@
                 align-items: center;
                 flex-direction: column;
                 border-radius: 7px;
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+                
                 p {
                     border-radius: 10px;
                     background-color: white;
                     padding: 5px;
-                    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+                    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
                 }
                 
                 p:hover {
@@ -75,13 +77,13 @@
                     padding: 5px;
                     color: white;
                     cursor: pointer;
-
+                    
                 }
-
+                
             }
-
+            
         }
-
+        
         div {
             top: 30vh;
             left: auto;
@@ -93,10 +95,10 @@
             flex-direction: column;
             align-items: center;
             border-radius: 7px;
-
+            
             .post {
                 box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-
+                
                 margin-left: 2.5vw;
                 margin-top: 20px;
                 width: 75vw;
@@ -106,6 +108,7 @@
                 justify-content: flex-start;
                 flex-direction: column;
                 align-items: center;
+                
 
                 header {
                     height: 10vh;
