backend messages and chat apis have been created and tested

--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -66,10 +66,14 @@
                 box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
                 
                 p {
+                    width: 5vw;
                     border-radius: 10px;
                     background-color: white;
                     padding: 5px;
                     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
                 
                 p:hover {
