--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -67,15 +67,28 @@
     color: black;
 
     .messages {
-        background-color: #FF6410;
-        width: 70vw;
+        width: 65vw;
         height: 80vh;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+        margin-bottom: 5px;
+        .message{
+            display: flex;
+            align-items: center;
+            font-size: larger;
+            padding-left: 5px;
+            border-radius: 7px;
+            margin: 2.5px;
+            width: 50vw;
+            height: 10vh;
+            background-color: white;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+        }
     }
 
-    section {
+    form {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -84,7 +97,7 @@
         background-color: green;
 
         input {
-            width: 59vw;
+            width: 58vw;
             border-radius: 7px;
         }
 
