--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -27,8 +27,8 @@
             border-radius: 7px;
             height: 30px;
             width: 5vw;
-            border-radius: 0;
-            box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -1px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
         }
         button:hover{
             color: white;
