--- a/src/pages/UserFriends/UserFriends.module.scss
+++ b/src/pages/UserFriends/UserFriends.module.scss
@@ -1,17 +1,44 @@
 .UserFriends{
-    position: absolute;
+    position: fixed;
     top:30px;
     width: 100vw;
-    height: 100vh;
-    color:black;
     display: flex;
     flex-direction: column;
     align-items: center;
     h1{
         width: 100vw;
         margin-left: 60px;
+        color: rgb(180,218,247);
     }
     ul{
         overflow-y: scroll;
+        width: 70vw;
+        left: 15vw;
+        li{
+            display: flex;
+            justify-content: space-around;
+            flex-direction: row;
+            width: 70vw;
+            img{
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+            }
+            .friendName{
+                width: 33%;
+                color: black;
+
+            }
+            button{
+                border-radius: 7px;
+                padding: 3px;
+                background-color: white;
+                border: solid 1px black;
+            }
+            button:hover{
+                background-color: rgb(180,218,247);
+                color: white;
+            }
+        }
     }
 }
