--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -1,210 +1,214 @@
-    ul{
-        position: absolute;
-        top:15vmin;
-        width: 55vw;
-        border-radius: 7px;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        overflow-x:hidden;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        list-style-type: none;
-        animation: fadeIn 0.5s;
-        height: 80vh;
-        overflow-y:scroll;
-        left: 21vw;
-        li{
-            background-color: white;
-            box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
-            height: 70vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            margin-bottom: 7.5px;
-            margin-top: 7.5px;
-            align-items: center;
-            width: 55vw;
-            border-radius: 7px;
-            margin-right: 30px;
-            border: solid white;
-            section{
-                display: flex;
-                justify-content: space-between;
-                height: 10vh;
-                width: 55vw;
-                align-items: center;
-                h1{
-                    color: rgb(171,211,246);
-                    padding-right: 10px;
-                }
-                h2{
-                    padding-left: 10px;
-                    
-                    
-                }
-                .forumTitle{
-                    padding-left: 1vw;
-                }
-            }
-            h3{
-                
-                margin-top: 0;
-                height: 50vh;
-                width: 54vw;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background-color: gray;
-                border: solid 2px white;
-                border-radius: 7px;
-                font-size: 10vmin;
-                overflow: hidden;
-            }
-            .postImage{
-                width: 55vw;
-                height: 70vh;
-            }
-            .postImage:hover{
-                cursor: pointer;
-            }
-            h3:hover{
-                transition: 0.1s;
-                border-radius: 7px;
-                cursor: pointer;
-            }
-            aside{
-                display: flex;
-                width: 55vw;
-                justify-content: flex-start;
-                flex-direction: column;
-                align-items: flex-start;
-                margin-top: 0;
-                height: 15vh;
-                .pDiv{
-                    display: flex;
-                    border-top: solid 1px black;
-                    width: 55vw;
-                    p{
-                        margin-left:5px ;
-                        margin-right:5px ;
-                        height: 2.5vh;
-                    }
-                }
-                .likes:hover,.dislikes:hover,.comment:hover{
-                    color: rgb(171,211,246);
-                    cursor: pointer;
-                }
-                footer{
-                    align-self: center;
-                    border-radius: 7px;
-                    padding: 2.5px;
-                    border: solid 1px black;
-                    width: 50vw;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+ul {
+  position: absolute;
+  top: 15vmin;
+  width: 55vw;
+  border-radius: 7px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  list-style-type: none;
+  animation: fadeIn 0.5s;
+  height: 80vh;
+  overflow-y: scroll;
+  left: 21vw;
+  li {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+      rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+      rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-bottom: 7.5px;
+    margin-top: 7.5px;
+    align-items: center;
+    width: 55vw;
+    border-radius: 7px;
+    margin-right: 30px;
+    border: solid white;
+    section {
+      display: flex;
+      justify-content: space-between;
+      height: 10vh;
+      width: 55vw;
+      align-items: center;
+      h1 {
+        padding-right: 10px;
+        color: transparent;
 
-                }
-            }
-
-        }
-        li:hover{
-            padding: 4px;
-            transition: 0.1s;
-            border-radius: 7px;
-
-        }
+        background: #666666;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
+      }
+      h2 {
+        padding-left: 10px;
+      }
+      .forumTitle {
+        padding-left: 1vw;
+        color: transparent;
+        background: #666666;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
+      }
     }
-
+    h3 {
+      margin-top: 0;
+      height: 50vh;
+      width: 54vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: gray;
+      border: solid 2px white;
+      border-radius: 7px;
+      font-size: 10vmin;
+      overflow: hidden;
+    }
+    .postImage {
+      width: 55vw;
+      height: 70vh;
+    }
+    .postImage:hover {
+      cursor: pointer;
+    }
+    h3:hover {
+      transition: 0.1s;
+      border-radius: 7px;
+      cursor: pointer;
+    }
+    aside {
+      display: flex;
+      width: 55vw;
+      justify-content: flex-start;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-top: 0;
+      height: 15vh;
+      .pDiv {
+        display: flex;
+        border-top: solid 1px black;
+        width: 55vw;
+        p {
+          margin-left: 5px;
+          margin-right: 5px;
+          height: 2.5vh;
+        }
+      }
+      .likes:hover,
+      .dislikes:hover,
+      .comment:hover {
+        color: rgb(171, 211, 246);
+        cursor: pointer;
+      }
+      footer {
+        align-self: center;
+        border-radius: 7px;
+        padding: 2.5px;
+        border: solid 1px black;
+        width: 50vw;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+          rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+          rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+      }
+    }
+  }
+  li:hover {
+    padding: 4px;
+    transition: 0.1s;
+    border-radius: 7px;
+  }
+}
 
 @keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+  0% {
+    opacity: 0;
   }
+  100% {
+    opacity: 1;
+  }
+}
 
-@media (max-width:900px){
-    ul{
-        li{
-            section{
-                h1{
-                }
-                h2{
-                    
-                }
-                .forumTitle{
-                }
-            }
-            h3{
-            }
-            .postImage{
-
-            }
-            .postImage:hover{
-
-            }
-            h3:hover{
-
-            }
-            aside{
-
-                .pDiv{
-
-                    p{
-                    }
-                }
-                .likes:hover,.dislikes:hover,.comment:hover{
-
-                }
-                footer{
-
-                }            
+@media (max-width: 900px) {
+  ul {
+    li {
+      section {
+        h1 {
         }
-        li:hover{
+        h2 {
         }
+        .forumTitle {
+        }
+      }
+      h3 {
+      }
+      .postImage {
+      }
+      .postImage:hover {
+      }
+      h3:hover {
+      }
+      aside {
+        .pDiv {
+          p {
+          }
+        }
+        .likes:hover,
+        .dislikes:hover,
+        .comment:hover {
+        }
+        footer {
+        }
+      }
+      li:hover {
+      }
     }
+  }
 }
-}
-@media (prefers-color-scheme:dark) {
-    ul{
-        li{
-            background-color: rgb(28,28,28);
-            section{
-                h1{
-                    color: #FF6410;
-                }
-                h2{
-                    
-                }
-                .forumTitle{
-                    color: white;
-                }
-            }
-            h3{
-            }
-            .postImage{
-
-            }
-            .postImage:hover{
-
-            }
-            h3:hover{
-
-            }
-            aside{
-
-                .pDiv{
-
-                    p{
-                    }
-                }
-                .likes:hover,.dislikes:hover,.comment:hover{
-
-                }
-                footer{
-
-                }            
+@media (prefers-color-scheme: dark) {
+  ul {
+    li {
+      background-color: rgb(28, 28, 28);
+      section {
+        h1 {
+          color: #ff6410;
         }
-        li:hover{
+        h2 {
         }
+        .forumTitle {
+          color: white;
+        }
+      }
+      h3 {
+      }
+      .postImage {
+      }
+      .postImage:hover {
+      }
+      h3:hover {
+      }
+      aside {
+        .pDiv {
+          p {
+          }
+        }
+        .likes:hover,
+        .dislikes:hover,
+        .comment:hover {
+        }
+        footer {
+        }
+      }
+      li:hover {
+      }
     }
-}
+  }
 }
