--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -1,238 +1,255 @@
-    .UserPosts {
-        height: 90vh;
-        border-radius: 7px;
-        top: 10vh;
-        animation: fadeIn 0.5s;
-        overflow-y: scroll;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        left: 25vw;
-        list-style-type: none;
+.UserPosts {
+  height: 90vh;
+  border-radius: 7px;
+  top: 10vh;
+  animation: fadeIn 0.5s;
+  overflow-y: scroll;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  left: 25vw;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 70vw;
+  z-index: 3;
+  .yourPosts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    height: 10vh;
+    color: black;
+  }
+
+  li {
+    //animation: fadeIn 1s;
+    border-radius: 7px;
+    height: 60vh;
+    margin-top: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 65vw;
+    padding-bottom: 1vh;
+    section {
+      border-radius: 7px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 65vw;
+      height: 10vh;
+
+      h4 {
+        justify-self: flex-end;
+        margin-left: 10px;
+        color: transparent;
+        background: #666666;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
+      }
+
+      h2 {
+        justify-self: flex-start;
+        margin-right: 10px;
+        color: transparent;
+        background: #666666;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
+      }
+    }
+
+    h3 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50vh;
+      width: 64vw;
+      margin-top: 0;
+      background-color: gray;
+      border: solid 2px black;
+      border-radius: 7px;
+    }
+    .postImage {
+      width: 64vw;
+      height: 50vh;
+    }
+
+    h3:hover {
+      padding: 10px;
+      transition: 3s;
+      border-radius: 7px;
+      animation: borderHighlight 3s infinite;
+    }
+
+    aside {
+      display: flex;
+      width: 65vw;
+      justify-content: flex-start;
+      padding-left: 10px;
+
+      p {
+        margin-left: 5px;
+        margin-right: 5px;
+      }
+
+      .like:hover,
+      .dislike:hover,
+      .comment:hover {
+        color: rgb(171, 211, 246);
+      }
+      .pDiv {
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        width: 70vw;
-        z-index: 3;
-        .yourPosts {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 25px;
-            height: 10vh;
-            color: black;
+        border-top: solid 1px black;
+        width: 64.5vw;
+        p {
+          margin-left: 5px;
+          margin-right: 5px;
+          height: 2.5vh;
         }
+      }
+      .likes:hover,
+      .dislikes:hover,
+      .comment:hover {
+        color: rgb(171, 211, 246);
+        cursor: pointer;
+      }
+      footer {
+        align-self: center;
+        border-radius: 7px;
+        padding: 2.5px;
+        border: none;
+        width: 50vw;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      }
+    }
+  }
 
-        li {
-            //animation: fadeIn 1s;
-            border-radius: 7px;
-            height: 60vh;
-            margin-top: 20px;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            width: 65vw;
-            padding-bottom: 1vh;
-            section {
-                border-radius: 7px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                width: 65vw;
-                height: 10vh;
+  .noPosts {
+    margin-bottom: 5vh;
+  }
+}
 
-                h4 {
-                    justify-self: flex-end;
-                    margin-left: 10px;
-
-                }
-
-                h2 {
-                    justify-self: flex-start;
-                    margin-right: 10px;
-
-
-                }
-            }
-
-            h3 {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 50vh;
-                width: 64vw;
-                margin-top: 0;
-                background-color: gray;
-                border: solid 2px black;
-                border-radius: 7px;
-            }
-            .postImage{
-                width: 64vw;
-                height: 50vh;
-            }
-
-            h3:hover {
-                padding: 10px;
-                transition: 3s;
-                border-radius: 7px;
-                animation: borderHighlight 3s infinite;
-            }
-
-            aside {
-                display: flex;
-                width: 65vw;
-                justify-content: flex-start;
-                padding-left: 10px;
-
-                p {
-                    margin-left: 5px;
-                    margin-right: 5px;
-                }
-
-                .like:hover,
-                .dislike:hover,
-                .comment:hover {
-                    color: rgb(171, 211, 246);
-                }
-                .pDiv{
-                    display: flex;
-                    border-top: solid 1px black;
-                    width: 64.5vw;
-                    p{
-                        margin-left:5px ;
-                        margin-right:5px ;
-                        height: 2.5vh;
-                    }
-                }
-                .likes:hover,.dislikes:hover,.comment:hover{
-                    color: rgb(171,211,246);
-                    cursor: pointer;
-                }
-                footer{
-                    align-self: center;
-                    border-radius: 7px;
-                    padding: 2.5px;
-                    border: none;
-                    width: 50vw;
-                    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-                }
-            }
-        }
-
-        .noPosts {
-
-            margin-bottom: 5vh;
-        }
+@media (max-width: 900px) {
+  .UserPosts {
+    .yourPosts {
     }
 
-
-    @media (max-width:900px) {
-        .UserPosts {
-            .yourPosts {}
-
-            li {
-
-                section {
-
-                    h4 {}
-
-                    h2 {}
-                }
-
-                h3 {}
-
-                h3:hover {}
-
-                aside {
-
-                    p {}
-
-                    .like:hover,
-                    .dislike:hover,
-                    .comment:hover {}
-                }
-            }
-
-            .noPosts {}
+    li {
+      section {
+        h4 {
         }
+
+        h2 {
+        }
+      }
+
+      h3 {
+      }
+
+      h3:hover {
+      }
+
+      aside {
+        p {
+        }
+
+        .like:hover,
+        .dislike:hover,
+        .comment:hover {
+        }
+      }
     }
 
-    @media (prefers-color-scheme:dark) {
-        .UserPosts {
-            .yourPosts {
-                color: white;
-            }
+    .noPosts {
+    }
+  }
+}
 
-            li {
-
-                section {
-
-                    h4 {}
-
-                    h2 {}
-                }
-
-                h3 {}
-
-                h3:hover {}
-
-                aside {
-
-                    p {}
-
-                    .like:hover,
-                    .dislike:hover,
-                    .comment:hover {}
-                    .pDiv{
-                    
-                        p{
-                        }
-                    }
-                    .likes:hover,.dislikes:hover,.comment:hover{
-                    }
-                    footer{
-
-                        border: solid 1px white;
-                                        }
-                }
-            }
-
-            .noPosts {
-            }
-        }
+@media (prefers-color-scheme: dark) {
+  .UserPosts {
+    .yourPosts {
+      color: white;
     }
 
-    @keyframes borderHighlight {
-
-        0%,
-        100% {
-            border-color: rgb(180, 217, 247);
-            /* Initial and final border color */
+    li {
+      section {
+        h4 {
         }
 
-        25% {
-            border-color: white;
-            /* Highlighted border color */
+        h2 {
+        }
+      }
+
+      h3 {
+      }
+
+      h3:hover {
+      }
+
+      aside {
+        p {
         }
 
-        50% {
-            border-color: rgb(180, 217, 247);
-            /* Initial and final border color */
+        .like:hover,
+        .dislike:hover,
+        .comment:hover {
         }
-
-        75% {
-            border-color: white;
-            /* Highlighted border color */
+        .pDiv {
+          p {
+          }
         }
+        .likes:hover,
+        .dislikes:hover,
+        .comment:hover {
+        }
+        footer {
+          border: solid 1px white;
+        }
+      }
     }
 
-    @keyframes fadeIn {
-        0% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 1;
-        }
-
+    .noPosts {
     }
+  }
+}
+
+@keyframes borderHighlight {
+  0%,
+  100% {
+    border-color: rgb(180, 217, 247);
+    /* Initial and final border color */
+  }
+
+  25% {
+    border-color: white;
+    /* Highlighted border color */
+  }
+
+  50% {
+    border-color: rgb(180, 217, 247);
+    /* Initial and final border color */
+  }
+
+  75% {
+    border-color: white;
+    /* Highlighted border color */
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
